exports[`test Done 1`] = `
<span>
  100.0 kB, uploaded 100.0 kB (Ratio: 2.00)
</span>
`;

exports[`test Done partially 1`] = `
<span>
  10.0 kB of 100.0 kB (10%), uploaded 10.0 kB (Ratio: 2.00)
</span>
`;
